--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,22 +1,29 @@
-image: docker:19
-
-services:
-  - docker:dind
-
 stages:
   - build
+  - deploy
 
-before_script:
-  - docker version
-  - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-
-build:
+main-build:
+  image: maven:3.6.3-jdk-11-slim
   stage: build
   tags:
     - dev2
-    - dev2-server
   script:
-    - docker pull $CI_REGISTRY_IMAGE:latest || true
-    - docker build --cache-from $CI_REGISTRY_IMAGE:latest --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:latest .
-    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
-    - docker push $CI_REGISTRY_IMAGE:latest
+    - mvn clean install && mvn package -B -e
+  artifacts:
+    paths:
+      - target/*.jar
+  only:
+    - main
+
+main-deploy:
+  image: ubuntu:21.04
+  stage: deploy
+  tags:
+    - dev2
+  script:
+    - mv target/*.jar /home/dev/opt/springcicd.jar
+    - sudo systemctl restart springcicd.service
+  only:
+    - main
+  dependencies:
+    - main-build
