--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,29 +1,30 @@
+services:
+  - docker:19.03.7-dind
 stages:
-  - build
+  - build jar
+  - build and push docker image
   - deploy
-
-main-build:
+build:
   image: maven:3.6.3-jdk-11-slim
-  stage: build
-  tags:
-    - dev2-server
+  stage: build jar
+  before_script:
+    - source .env
   script:
-    - mvn clean install && mvn package -B -e
+    - mvn clean install -Dspring.profiles.active=development && mvn package -B -e -Dspring.profiles.active=development
   artifacts:
     paths:
       - target/*.jar
-  only:
-    - main
-
-main-deploy:
-  image: ubuntu:21.04
-  stage: deploy
-  tags:
-    - dev2-server
+docker build:
+  image: springtest:latest
+  stage: build and push docker image
+  before_script:
+    - source .env
   script:
-    - mv target/*.jar /home/dev/opt/springcicd.jar
-    - sudo systemctl restart springcicd.service
-  only:
-    - main
-  dependencies:
-    - main-build
+    - docker build --build-arg SPRING_ACTIVE_PROFILE=development -t $DOCKER_REPO .
+    - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD docker.io
+    - docker push $DOCKER_REPO
+deploy:
+  image: ubuntu:latest
+  stage: deploy
+  script:
+    - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD docker.io; docker stop $APP_NAME; docker system prune -a -f; docker pull $DOCKER_REPO; docker container run -d --name $APP_NAME -p $PORT -e SPRING_PROFILES_ACTIVE=$SPRING_ACTIVE_PROFILE $DOCKER_REPO; docker logout
