--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 export SPRING_ACTIVE_PROFILE='development'
-export DOCKER_REPO='username/demo_app:dev'
+export DOCKER_REPO='hoat35999/demo_app'
 export APP_NAME='demo_app_dev'
 export PORT='8080'
+export DOCKER_USER = hoat35999
+export DOCKER_PASSWORD = 01653693151
