--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,8 @@ stages:
 build:
   image: maven:3.6.3-jdk-11-slim
   stage: build jar
+  tags:
+    - runner-1
   before_script:
     - source .env
   script:
@@ -17,6 +19,8 @@ build:
 docker build:
   image: springtest:latest
   stage: build and push docker image
+  tags:
+    - runner-1
   before_script:
     - source .env
   script:
@@ -26,5 +30,7 @@ docker build:
 deploy:
   image: ubuntu:latest
   stage: deploy
+  tags:
+    - runner-1
   script:
     - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD docker.io; docker stop $APP_NAME; docker system prune -a -f; docker pull $DOCKER_REPO; docker container run -d --name $APP_NAME -p $PORT $DOCKER_REPO; docker logout
