--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 export SPRING_ACTIVE_PROFILE='development'
-export DOCKER_REPO='hoat35999/demo_app'
+export DOCKER_REPO='hoat35999/cicd'
 export APP_NAME='demo_app_dev'
 export PORT='8080'
 export DOCKER_USER='hoat35999'
