--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,12 +8,12 @@ build:
   image: maven:3.6.3-jdk-11-slim
   stage: build jar
   tags:
-    - local-docker
+    - local
   before_script:
     - source .env
   script:
     - mvn install
-    - mvn clean install  && mvn package
+    - mvn clean install
   artifacts:
     paths:
       - target/*.jar
@@ -21,7 +21,7 @@ docker build:
   image: docker:stable
   stage: build and push docker image
   tags:
-    - local-docker
+    - local
   before_script:
     - source .env
   script:
@@ -32,7 +32,7 @@ deploy:
   image: ubuntu:latest
   stage: deploy
   tags:
-    - local-docker
+    - local
   script:
     - ssh users@172.24.160.1
     - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD docker.io; docker stop $APP_NAME; docker system prune -a -f; docker pull $DOCKER_REPO; docker container run -d --name $APP_NAME -p $PORT $DOCKER_REPO; docker logout
