--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ docker build:
     - source .env
   script:
     - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD docker.io
-    - docker build --build-arg SPRING_ACTIVE_PROFILE=development -t $DOCKER_REPO .
+    - docker build -t $DOCKER_REPO .
     - docker push $DOCKER_REPO
 deploy:
   image: ubuntu:latest
