--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,7 @@ docker build:
   before_script:
     - source .env
   script:
+    - apk add --no-cache bash python3
     - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD docker.io
     - docker build -t $DOCKER_REPO .
     - docker push $DOCKER_REPO
