--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,15 +23,11 @@ docker build:
     - r1
   services:
     - name: docker:dind
-      alias: thedockerhost
-  variables:
-    DOCKER_HOST: tcp://thedockerhost:2375/
-    DOCKER_DRIVER: overlay2
-    DOCKER_TLS_CERTDIR: ""
+      entrypoint: ["dockerd-entrypoint.sh", "--tls=false"]
   before_script:
     - source .env
   script:
-    - apk add --no-cache bash python3
+    - export DOCKER_HOST=tcp://127.0.0.1:2375
     - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD docker.io
     - docker build -t $DOCKER_REPO .
     - docker push $DOCKER_REPO
