--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,14 @@ build:
 deploy:
   image: docker:stable
   stage: deploy
+  before_script:
+    - source .env
   tags:
     - r1
   script:
-    - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD docker.io; docker stop $APP_NAME; docker system prune -a -f; docker pull $DOCKER_REPO; docker container run -d --name $APP_NAME -p $PORT $DOCKER_REPO; docker logout
+    - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD docker.io
+    - docker stop $APP_NAME
+    - docker system prune -a -f
+    - docker pull $DOCKER_REPO
+    - docker container run -d --name $APP_NAME -p $PORT $DOCKER_REPO
+    - docker logout
